infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: 2g
    nginx.org/client-max-body-size: 2g
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '36000'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '36000'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '36000'
spec:
  rules:
    - host: sterling.dev
      http:
        paths:
          - path: /api/control/?(.*)
            pathType: Prefix
            backend:
              service:
                name: control-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: base-srv
                port:
                  number: 9000
    - host: admin.sterling.dev
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
